--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,3 +28,12 @@ body {
   height: 178px;
   display: block;
 }
+.article-container .ql-toolbar.ql-snow {
+  padding: 0 8px;
+}
+.article-container .ql-editor {
+  height: 300px;
+}
+.my-image .el-dialog__body {
+  padding-bottom: 0;
+}
